--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -54,11 +54,14 @@ jobs:
 
       - name: Set up Apache Maven Central
         uses: actions/setup-java@v2
+          #        with:
+        #          distribution: 'zulu' # See 'Supported distributions' for available options
         with:
-          distribution: 'zulu' # See 'Supported distributions' for available options
-          java-version: '16'
+          java-version: 11
+          server-id: ossrh
+
           cache: 'maven'
-          server-id: maven # Value of the distributionManagement/repository/id field of the pom.xml
+          #          server-id: maven # Value of the distributionManagement/repository/id field of the pom.xml
           server-username: ${{ secrets.OSSRH_USERNAME }} #MAVEN_USERNAME # env variable for username in deploy
           server-password: ${{ secrets.MAVEN_CENTRAL_TOKEN }} #MAVEN_CENTRAL_TOKEN # env variable for token in deploy
           gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }} # Value of the GPG private key to import
